@@ -403,6 +403,8 @@ void Player::Shutdown()
         for (int i=0;i<m_controlclsidsafe.Size();i++)
                 delete m_controlclsidsafe.ElementAt(i);
         m_controlclsidsafe.RemoveAllElements();
+
+        m_changed_vht.clear();
 }
 
 void Player::ToggleFPS()
@@ -2011,6 +2013,21 @@ void Player::UpdatePhysics()
         plumb_update(/*sim_msec*/cur_time_msec, GetNudgeX(), GetNudgeY());
 
 #ifdef ACCURATETIMERS
+		// do the en/disable changes for the timers that piled up
+		for (size_t i = 0; i < m_changed_vht.size(); ++i)
+			if (m_changed_vht[i].enabled) // add the timer?
+			{
+				if (m_vht.IndexOf(m_changed_vht[i].m_timer) < 0)
+					m_vht.AddElement(m_changed_vht[i].m_timer);
+			}
+			else // delete the timer?
+			{
+				const int idx = m_vht.IndexOf(m_changed_vht[i].m_timer);
+				if (idx >= 0)
+					m_vht.RemoveElementAt(idx);
+			}
+		m_changed_vht.clear();
+
                 m_pactiveball = NULL; // No ball is the active ball for timers/key events
 
                 const int p_timeCur = (int)((m_curPhysicsFrameTime - m_StartTime_usec)/1000); // milliseconds
@@ -2379,6 +2396,21 @@ void Player::Render()
     }
 
 #ifndef ACCURATETIMERS
+	// do the en/disable changes for the timers that piled up
+	for (size_t i = 0; i < m_changed_vht.size(); ++i)
+		if (m_changed_vht[i].enabled) // add the timer?
+		{
+			if (m_vht.IndexOf(m_changed_vht[i].m_timer) < 0)
+				m_vht.AddElement(m_changed_vht[i].m_timer);
+		}
+		else // delete the timer?
+		{
+			const int idx = m_vht.IndexOf(m_changed_vht[i].m_timer);
+			if (idx >= 0)
+				m_vht.RemoveElementAt(idx);
+		}
+	m_changed_vht.clear();
+
     m_pactiveball = NULL;  // No ball is the active ball for timers/key events
 
     for (int i=0;i<m_vht.Size();i++)
