@@ -2,6 +2,8 @@ VP 9.9.3 Changelog
 ------------------------
 - disable visual touch/pen feedback to save one frame of input latency/lag
 
+- fix timers that dis/enable themselves in the script
+
 VP 9.9.2 Changelog
 ------------------------
 - new plunger code (see Plunger pdf)
